# Holle

./: .gitignore  CLAUDE.md  HollePet.spec  LICENSE  LICENSE.txt  README.md  pyproject.toml  terminal_controls.py
.claude/: settings.local.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2025-06-11-pet-enhancements-plan.md  2026-05-24-holle-music-player.md  2026-05-24-spectrum-visualizer-rewrite.md  2026-06-03-desktop-pet.md  2026-06-20-ai-provider-plan.md  2026-06-20-settings-migration-plan.md  2026-06-22-bilibili-audio-plan.md
docs/superpowers/specs/: 2025-06-11-pet-enhancements-design.md  2026-06-03-desktop-pet-design.md  2026-06-20-ai-provider-design.md  2026-06-20-settings-migration-design.md  2026-06-22-bilibili-audio-design.md
memory/: _index.md  _tutorial.md
memory/bugs/: ai_tool_arguments_json.md
memory/modules/: bilibili_searcher.md  commands.md  online_cache.md  pet.md  project_ai_memory.md  project_ai_provider.md  project_settings.md
memory/progress/: current-status.md  session-2026-06-20.md  session-2026-06-21.md
scripts/: HolleMusic-Setup.iss  HollePet-Setup.iss  build-exe.py  combine-icons.py  create-desktop-shortcuts.ps1  generate-icon.py
src/holle_music/: .holle_color.json  .holle_eq.json  __init__.py  __main__.py  ai_memory.py  ai_provider.py  app.py  bilibili_searcher.py  glm_api.py  lyrics_ai.py  minimax_api.py  models.py  online_cache.py  player.py  scanner.py  settings.py  shared.py  spectrum.py  tui_tools.py  widgets.py
src/holle_music/pet/: __init__.py  ai_tools.py  ark_api.py  bubble.py  bubble_renderer.py  chat_dialog.py  click_zone.py  (+6 more)
tests/: __init__.py  test_ai_memory.py  test_ai_provider.py  test_bilibili_searcher.py  test_commands.py  test_models.py  test_online_cache.py  test_player.py  test_scanner.py  test_settings.py  test_tui_tools.py
tests/pet/: test_ai_tools.py  test_click_zone.py  test_player_proxy.py  test_renderer.py
