[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "holle-music"
version = "0.1.0"
description = "终端命令行音乐/电台播放器"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.40.0",
    "pygame>=2.5.0",
    "mutagen>=1.47.0",
    "librosa>=0.10.0",
]

[project.scripts]
hollemusic = "holle_music.app:main"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.23.0"]
