[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "holle-music"
version = "0.1.1"
description = "终端命令行音乐播放器，支持 AI 聊天、频谱可视化、随机/顺序/循环播放"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Holle Music Team"},
]
keywords = ["music", "player", "tui", "terminal", "textual", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "textual>=0.40.0",
    "pygame>=2.5.0",
    "mutagen>=1.47.0",
    "librosa>=0.10.0",
    "Pillow>=10.0.0",
    "openai>=1.0.0",
    "ddgs>=3.0.0",
]

[project.scripts]
Holle = "holle_music.app:main"
HollePet = "holle_music.pet.main:main"

[project.urls]
Homepage = "https://github.com/Redpinkt5/Holle"
Repository = "https://github.com/Redpinkt5/Holle"
Issues = "https://github.com/Redpinkt5/Holle/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.23.0"]
